[gd_scene load_steps=12 format=3 uid="uid://d12yc5cms8v1f"]

[ext_resource type="Script" path="res://world.gd" id="1_sjnxc"]
[ext_resource type="PackedScene" path="res://player.tscn" id="2_8naok"]
[ext_resource type="PackedScene" uid="uid://cicbdgx4ru0lg" path="res://level_completed.tscn" id="5_3nk5g"]
[ext_resource type="AudioStream" path="res://mixu_extended.mp3" id="5_32okg"]
[ext_resource type="PackedScene" path="res://level_tile_map.tscn" id="6_x1i84"]

[sub_resource type="LabelSettings" id="LabelSettings_qbgm1"]
font_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_3jm00"]
font_size = 6

[sub_resource type="LabelSettings" id="LabelSettings_xecg5"]
font_size = 6
font_color = Color(0.976471, 0, 0, 1)

[sub_resource type="Animation" id="Animation_xai1e"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/StartIn/CenterContainer/StartInLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Start in: 3"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/StartIn:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_btfom"]
resource_name = "countdown"
length = 3.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/StartIn/CenterContainer/StartInLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 1.1, 2.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": ["Start in: 3", "Start in: 2 ", "Start in: 1"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/StartIn:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lyjlk"]
_data = {
"RESET": SubResource("Animation_xai1e"),
"countdown": SubResource("Animation_btfom")
}

[node name="World" type="Node2D"]
script = ExtResource("1_sjnxc")

[node name="Player" parent="." instance=ExtResource("2_8naok")]
position = Vector2(88, 72)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LevelCompleted" parent="CanvasLayer" instance=ExtResource("5_3nk5g")]
visible = false

[node name="StartIn" type="ColorRect" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.388235)

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/StartIn"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartInLabel" type="Label" parent="CanvasLayer/StartIn/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start in: 3"
label_settings = SubResource("LabelSettings_qbgm1")
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 10
anchor_right = 1.0
offset_top = 4.0
offset_bottom = 12.0
grow_horizontal = 2

[node name="LevelTimeLabel" type="Label" parent="CanvasLayer/CenterContainer"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
label_settings = SubResource("LabelSettings_3jm00")

[node name="LevelTimeLabel2" type="Label" parent="CanvasLayer/CenterContainer"]
unique_name_in_owner = true
visible = false
clip_contents = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
label_settings = SubResource("LabelSettings_xecg5")

[node name="LevelTileMap" parent="." instance=ExtResource("6_x1i84")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_lyjlk")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_32okg")
autoplay = true

[node name="EndLevel" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[connection signal="next_level" from="CanvasLayer/LevelCompleted" to="." method="_on_level_completed_next_level"]
[connection signal="retry" from="CanvasLayer/LevelCompleted" to="." method="_on_level_completed_retry"]
[connection signal="timeout" from="EndLevel" to="." method="_on_end_level_timeout"]
